[package]
name = "remotedesktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ffmpeg-next = { version = "7.1.0" }
figment = { version = "0.10.8", features = ["toml", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
retry = "2.0"
xcb = { version = "1.2.0", features = ["xtest"] }
xdg = "2.4.1"
